--- a/project/index.html
+++ b/project/index.html
@@ -1,15 +1,7 @@
-<html> gc cakveC aecKVAC AVWC awvlc </html> AWcvAWC awc lC awc
-Wcw WC
-AWC awc
-awcaec
-awc
 
-caw
-wc
-wc
-cw
+<html>
+<p>veer ji sat shri kaal </p>
+<p>hvc</p>
+<p> dimg mat kha </p>
 
-wac
-wc
-
-awc
+</html>
