--- a/project/index.html
+++ b/project/index.html
@@ -1,15 +1,6 @@
-<html> gc cakveC aecKVAC AVWC awvlc </html> AWcvAWC awc lC awc
-Wcw WC
-AWC awc
-awcaec
-awc
+<html>
+demsbkjcBEc
+EvklBEv
+EVkbev
 
-caw
-wc
-wc
-cw
-
-wac
-wc
-
-awc
+</html>
