--- a/project/index.html
+++ b/project/index.html
@@ -3,13 +3,5 @@
 <html>
 <p>veer ji sat shri kaal </p>
 <p>hvc</p>
-<p> dimg mat kha </p>
-
-=======
-<html>
-demsbkjcBEc
-EvklBEv
-EVkbev
-
->>>>>>> dev2
+<pjbckaNclk AKMC kAcb k cKB abkjAwcbjabckjwj>>>>>>> dev2
 </html>
