--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-
 <html>
-<p>veer ji sat shri kaal </p>
-<p>hvc</p>
-<pjbckaNclk AKMC kAcb k cKB abkjAwcbjabckjwj>>>>>>> dev2
+<p>This is the study one paragraph 1</p>
 </html>
