--- a/practice1/practice1.html
+++ b/practice1/practice1.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>My First Page</title>
+  <style>body{font-family:system-ui;margin:2rem;line-height:1.6}</style>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>This is a small HTML example.</p>
+  <h1>Hello, world!</h1>
+  <p>This is a basic HTML page.</p>
 </body>
 </html>
