dev 1 has done it

--- a/qwe/qwe.html
+++ b/qwe/qwe.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>My First Page</title>
+  <meta charset="utf-8">
+  <title>Simple Page</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>This is a simple HTML page yes sir.</p>
+  <h2>I am edited by dev2 and b</h2>
+  <p>One nice Hindi song: <b>Tum Hi Ho</b> (from the movie Aashiqui 2).</p>
 </body>
 </html>
+
