--- a/aws/aws.html
+++ b/aws/aws.html
@@ -8,8 +8,8 @@
     <p>This is a simple HTML paragraph.</p>
     <ul>
         <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+        <li>nanananan</li>
+        <li>hahahah</li>
     </ul>
     <a href="https://www.google.com" target="_blank">Go to Google</a>
     <p>hahahah</p>
