--- a/practical1/file.html
+++ b/practical1/file.html
@@ -4,9 +4,6 @@
   <title>My Simple Webpage</title>
 </head>
 <body>
-
-  <h1>Welcome to My Webpage!</h1>
-  <p>This is a paragraph of text on my simple webpage.</p>
-
+<p>Edited by Developer 1 My name is lakhan </p>
 </body>
 </html>
