--- a/practical1/file.html
+++ b/practical1/file.html
@@ -4,9 +4,6 @@
   <title>My Simple Webpage</title>
 </head>
 <body>
-
-  <h1>Welcome to My Webpage!</h1>
-  <p>This is a paragraph of text on my simple webpage.</p>
-
+<p>My name is dev2 and real name is rudra</p>
 </body>
 </html>
